--- a/Login/index.html
+++ b/Login/index.html
@@ -16,7 +16,7 @@
             <input type="password" name="password"/></br></br>
             <input type="submit" value="Sign Up" />
         </form>
-        <h4>Alredy have an account</h4>
+        <h4>Alredy registered ?</h4>
         <input type="button"  onclick="location.href='login.html'" value="Login"/>
     </body>
 </html>
