--- a/Login/login.html
+++ b/Login/login.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <title>
-            Log in
+            Login
         </title>
     </head>
     <body>
         <form action="Login" method="post">
-            <label>Name : </label><br>
+            <label> Name </label><br>
             <input type="text" name="name"/><br>
-            <label>Password : </label></br>
+            <label> Password </label></br>
             <input type="password" name="password"/></br></br>
             <input type="submit" value="Login" />
         </form>
