--- a/Login/index.html
+++ b/Login/index.html
@@ -1,18 +1,18 @@
 <html>
     <head>
         <title>
-            Sign Up
+            Sign up
         </title>
     </head>
     <body>
         <form action="SignUp" method="post">
-            <label>Name : </label><br>
+            <label> Name </label><br>
             <input type="text" name="name"/><br>
-            <label>Pin : </label></br>
+            <label> Pin </label></br>
             <input type="text" name="pin"/></br>
-            <label>College : </label></br>
+            <label> College </label></br>
             <input type="text" name="college"/></br>
-            <label>Password : </label></br>
+            <label> Password </label></br>
             <input type="password" name="password"/></br></br>
             <input type="submit" value="Sign Up" />
         </form>
